fix: nav bar gap in small screens

--- a/_sass/components/nav-bar.scss
+++ b/_sass/components/nav-bar.scss
@@ -47,7 +47,7 @@
         ul {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 20px;
+            gap: 15px;
         }
     }
 }
